--- a/public/.htaccess
+++ b/public/.htaccess
@@ -21,5 +21,5 @@
 </IfModule>
 
 <IfModule dir_module>
-    DirectoryIndex index.html index.blade.php
+    DirectoryIndex index.html index.blade.php index.php
 </IfModule>
